--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "format": "prettier --write *.js"
+    "format": "prettier --write *.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/satrirattt/NODEREST-WEDJ#readme",
   "devDependencies": {
+    "nodemon": "^3.1.9",
     "prettier": "^3.4.2"
   },
   "dependencies": {
